# chile-public-balance

./: .gitignore  README.md  pyproject.toml  research-findings.md
.github/workflows/: collect-and-deploy.yml  test.yml
data/: balance.csv  exchange_rates.csv
data/manual/: contingent_liabilities.csv
pdfs/: README.md
research/: chilean_government_liabilities_data_sources.md
src/chile_balance/: __main__.py  cli.py  model.py  pipeline.py  series_config.py  site.py  store.py
src/chile_balance/collectors/: banco_central.py
src/chile_balance/normalizers/: banco_central.py
src/chile_balance/templates/: charts.js  controls.html  empty.html  page.html
tests/: test_cli.py  test_collector_banco_central.py  test_model.py  test_normalizer_banco_central.py  test_pipeline.py  test_site.py  test_store.py
